--- a/www/index.html
+++ b/www/index.html
@@ -257,7 +257,7 @@
     </div>
     <div class="page" id="friendsSearch" data-role="page">
         <div class="row">
-            <form class="col s12">
+            <form class="col s12" id="searchForm">
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="users_name" type="text" class="validate" ng-model="searchName">
@@ -432,6 +432,7 @@
         </div>
         <div id="modal4" class="modal">
             <div class="modal-content">
+            <form id="InitStatsForm">
                 <div class="row">
                     <div class="col s12">Add Stats so far</div>
                 </div>
@@ -465,6 +466,7 @@
                         <input type="number" name="passes" id="passes" ng-model="statPasses" value="">
                     </div>
                 </div>
+               </form>
             </div>
             <div class="modal-footer">
                 <a href="#!" ng-click="addStats()" class="waves-effect waves-green btn-flat">Submit Stats</a>
@@ -473,6 +475,7 @@
         </div>
         <div id="modal5" class="modal">
             <div class="modal-content">
+            <form id="AccStatsForm">
                 <div class="row">
                     <div class="col s12">Add Stats since latest update</div>
                 </div>
@@ -506,6 +509,7 @@
                         <input type="number" name="passes" id="passes" ng-model="stataccPasses" value="0">
                     </div>
                 </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <a href="#!" ng-click="addaccStats()" class="waves-effect waves-green btn-flat">Submit Stats</a>
@@ -629,11 +633,6 @@
     <div class="page" id="utilities" data-role="page">
         <div class="row">
             <div class="col s12">
-                <p>Utilities</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
                 <ul class="collection">
                     <li class="collection-item avatar" id="toMatchReports">
                         <i class="mdi-editor-insert-comment circle yellow"></i>
@@ -674,6 +673,7 @@
         <div class="row">
             <div class="col s12">Enter match details below</div>
         </div>
+        <form id="reportForm">
         <div class="row">
             <div class="input-field col s12">
                 <label for="date">Date</label>
@@ -715,6 +715,7 @@
                 <textarea id="report" class="materialize-textarea" ng-model="gameReport"></textarea>
             </div>
         </div>
+        </form>
         <div class="row">
             <div class="col s12" align="center">
                 <a href="#!" ng-click="saveReport()" class="waves-effect waves-green btn-flat">Save</a>
