--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/contour.js"></script>
     <title>StatSticks</title>
+ 
 </head>
 
 <body ng-controller="MainCtrl">
@@ -644,6 +645,11 @@
                         <p class="padding-top">Report on a match</p>
                         <a href="#!" class="secondary-content"></a>
                     </li>
+                    <li class="collection-item avatar" id="toStopwatch">
+                        <i class="mdi-editor-mode-edit circle light-blue"></i>
+                        <p class="padding-top">Stopwatch</p>
+                        <a href="#!" class="secondary-content"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -722,6 +728,23 @@
                 <a href="#!" class="waves-effect waves-green btn-flat">Close</a>
             </div>
         </div>
+    </div>
+
+    <div class="page" id="StopwatchPage" data-role="page">
+    	<div class="row">
+    		<div class="col s12">
+    			<p>Stopwatch</p>
+    		</div>
+    	</div>
+    	<div class="row">
+    		<div class="col s12">
+    			<form name="clock">
+				<input type="text" size="12" name="stwa" /><br />
+				<input type="button" name="theButton" onClick="stopwatch(this.value);" value="Start" style="border: 1 solid #0000FF" />
+				<input type="button" value="Reset" onClick="resetIt();reset();" style="border: 1 solid #0000FF" />
+				</form>
+    		</div>
+    	</div>
     </div>
 
     <div class="page" id="offline" data-role="page">
@@ -833,6 +856,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.js"></script>
     <script type="text/javascript" src="js/ang/app.js"></script>
     <script type="text/javascript" src="js/ang/services.js"></script>
+
+
 
 </body>
 
