search not working on mobile

--- a/www/index.html
+++ b/www/index.html
@@ -261,7 +261,7 @@
             <form class="col s12" id="searchForm">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="users_name" type="text" class="validate" ng-model="searchName">
+                        <input id="users_name" type="text" ng-model="searchName">
                         <label for="first_name">Search Users</label>
                     </div>
                 </div>
