--- a/www/index.html
+++ b/www/index.html
@@ -764,13 +764,13 @@
                     	<div class="row">
 	                        <div class="col s12">
 	                            <label for="Setminutes">Minutes:</label>
-	                            <input type="Number" name="Setminutes" id="Setminutes"/>
+	                            <input type="text" name="Setminutes" id="Setminutes"/>
 	                        </div>
 	                    </div>
 	                    <div class="row">
 	                        <div class="col s12">
 	                            <label for="seconds">Seconds:</label>
-	                            <input type="Number" name="seconds" id="seconds"/>
+	                            <input type="text" name="seconds" id="seconds"/>
 	                        </div>
 	                    </div>
                     </form>
