TTimer and icons

--- a/www/index.html
+++ b/www/index.html
@@ -184,7 +184,7 @@
             <div class="center-text col s12">
                 <ul class="collapsible" data-collapsible="accordion">
                     <li>
-                        <div class="collapsible-header"><i class="mdi-av-equalizer"></i>About</div>
+                        <div class="collapsible-header"><i class="mdi-social-group"></i>About</div>
                         <div class="collapsible-body list">
                             <p> Position: <span>{{userDetails.get('Position')}}</span></p>
                             <p> Club: <span>{{userDetails.get('Club')}}</span></p>
@@ -199,7 +199,7 @@
             <div class="center-text col s12">
                 <ul class="collapsible" data-collapsible="accordion">
                     <li>
-                        <div class="collapsible-header"><i class="mdi-av-equalizer"></i>Graphs</div>
+                        <div class="collapsible-header"><i class="mdi-action-trending-up"></i>Graphs</div>
                         <div class="collapsible-body">
                             <div class="center-text col s12">
                                 <select class="browser-default" ng-model="profileGraph">
@@ -646,7 +646,7 @@
                         <a href="#!" class="secondary-content"></a>
                     </li>
                     <li class="collection-item avatar" id="toStopwatch">
-                        <i class="mdi-editor-mode-edit circle light-blue"></i>
+                        <i class="mdi-device-access-alarms circle light-blue"></i>
                         <p class="padding-top">Stopwatch</p>
                         <a href="#!" class="secondary-content"></a>
                     </li>
