--- a/www/index.html
+++ b/www/index.html
@@ -302,16 +302,6 @@
                 <h5 id="UsersName" align='center'> {{FriendUsername}}</h5>
             </div>
         </div>
-        <div class="row" id="follow">
-            <div class="center-text col s12" align="center">
-                <a class="waves-effect waves-light btn light-blue lighten-2" id="followButton" ng-click="follow()">Follow</a>
-            </div>
-        </div>
-        <div class="row" id="unfollow">
-            <div class="center-text col s12" align="center">
-                <a class="waves-effect waves-light btn light-blue lighten-2" id="unfollowButton" ng-click="unFollow()">unFollow</a>
-            </div>
-        </div>
         <div class="row">
             <div class="center-text col s12">
                 <ul class="collapsible" data-collapsible="accordion">
@@ -364,6 +354,16 @@
                 </ul>
             </div>
         </div>
+        <div class="row" id="follow">
+            <div class="center-text col s12" align="center">
+                <a class="waves-effect waves-light btn light-blue lighten-2" id="followButton" ng-click="follow()">Follow</a>
+            </div>
+        </div>
+        <div class="row" id="unfollow">
+            <div class="center-text col s12" align="center">
+                <a class="waves-effect waves-light btn light-blue lighten-2" id="unfollowButton" ng-click="unFollow()">unFollow</a>
+            </div>
+        </div>
         <div id="modal9" class="modal">
             <div class="modal-content">
                 <div id="FriendprofileGraph"></div>
@@ -376,7 +376,7 @@
     <div class="page" id="stats" data-role="page">
         <div class="row">
             <div class="col s12" id="initStats">
-                <p> It appears that that this is your first time visiting the stats section, please fill in your current stats using the bytton below</p>
+                <p> It appears that that this is your first time visiting the stats section, please fill in your current stats using the button below</p>
             </div>
             <div class="col s12" id="accStats">
                 <p> How did your game go? Press the button at the bottom of the page to add your latest stats</p>
@@ -417,12 +417,12 @@
         <div class="row">
             <div class="col s12" align="center" id="statButtons">
                 <button data-target="modal4" id="initStatsButton" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2 "> Add Stats </button>
-                <button data-target="modal5" id="AcumStatsButton" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2 "> Add Acc Stats </button>
+                <button data-target="modal5" id="AcumStatsButton" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2 "> Add Stats </button>
             </div>
         </div>
         <div class="row">
             <div class="col s12" align="center">
-                <button data-target="modal10" id="resetButton" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2">Reset stats</button>
+                <button data-target="modal10" id="resetButton" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2">Reset Stats</button>
             </div>
         </div>
         <div id="modal10" class="modal">
@@ -433,7 +433,7 @@
             </div>
             <div class="modal-footer">
                 <a href="#!" ng-click="resetStats()" class=" waves-effect waves-light btn  btn-flat">Yes</a>
-                <a href="#!" class=" modal-action modal-close waves-effect waves-light btn btn-flat">N0</a>
+                <a href="#!" class=" modal-action modal-close waves-effect waves-light btn btn-flat">No</a>
             </div>
         </div>
         <div id="modal4" class="modal">
@@ -631,8 +631,8 @@
                 <div id="lineGraph"></div>
             </div>
             <div class="modal-footer">
+            	<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
                 <a href="#!" ng-click="saveLineGraph()" class="waves-effect waves-green btn-flat">Save</a>
-                <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
             </div>
         </div>
     </div>
@@ -671,7 +671,7 @@
                     <h6> {{report.get('homeTeam')}} v {{report.get('awayTeam')}}</h5>
                     <p>{{report.get('homeGoals')}} - {{report.get('awayGoals')}}</p>
                     <p> Date: <span>{{report.get('Date')}}</span></p>
-                    <p> Report: <br><br> <span>{{report.get('report')}}</span></p>
+                    <p> Report: <br> <span>{{report.get('report')}}</span></p>
                 </div>
             </div>
         </div>
